--- a/med_cabinet_react/public/less/navigation.less
+++ b/med_cabinet_react/public/less/navigation.less
@@ -2,9 +2,8 @@
     margin: 0 auto;
     width: 100%;
     display: flex;
-    flex-wrap: nowrap;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items:center;
 
     @media(max-width: 500px) {
@@ -41,7 +40,6 @@
     }
 
     nav {
-        width: 30%;
         display: flex;
         justify-content: flex-start;
 
